# SakaiBot

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Gemini_Prompt.md  Gemini_Prompt.txt  LICENSE  Makefile  QWEN.md  README.md  ai_processor.py  cache_manager.py  check_gtts.py  cli_handler.py  config.ini.example  debug-fix-summary.md  debug-plan.md  docker-compose.yml  event_handlers.py  main.py  manual-testing-guide.md  output.md  project_planner.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  root-cause-analysis.md  sakaibot.py  settings_manager.py  setup.cfg  setup.py  setup_config.py  telegram_utils.py  temp_voice_download_stt_1123577_1123571.oga  (+1 more)
.claude/agents/: 3-amigo-pattern.md  api-designer.md  architecture-agent.md  backend-specialist.md  baseline-metrics.md  clickup-data-cleaner.md  code-reviewer.md  database-specialist.md  debugger.md  deployment-guide.md  devops-specialist.md  documentation-writer.md  financial-analyst.md  frontend-specialist.md  hr-performance.md  marketing-roi.md  orchestration-guide.md  performance-optimizer.md  pm-agent.md  refactor-specialist.md  security-auditor.md  team-lead.md  tester.md  ux-specialist.md
.github/workflows/: main.yml  quality.yml
docker/: entrypoint.sh  healthcheck.sh
docker/vps/: deploy.sh  enable_proxy.sh  prepare_for_build.sh  proxy.env.example
docs/: 00_EXECUTIVE_SUMMARY.md  01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_FEATURES.md  04_CODE_QUALITY.md  05_DEPLOYMENT.md  06_DEVELOPMENT.md  07_ACTION_PLAN.md  AI_REFACTOR_MIGRATION.md  ANALYSIS_SUMMARY.md  API.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CLI.md  CLI_REFACTOR_SUMMARY.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_REPORT.md  COMMANDS.md  COMMANDS_REPORT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  ENTERPRISE_IMPROVEMENTS.md  FAQ.md  FEATURES.md  FINAL_REPORT.md  FINAL_TEST_REPORT.md  HOW_TO_RUN.md  IMAGE_GENERATION.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  INTERACTIVE_MENU_GUIDE.md  MODEL_USAGE.md  PERSIAN_FEATURES.md  PERSIAN_TTS_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  PROXY_SETUP.md  README.md  (+31 more)
docs/architecture/: README.md  image-generation-architecture.md
docs/changelog/: README.md  image-generation-feature.md
docs/features/: README.md  image-generation.md
docs/image-generation/: FOR_SENIOR_REVIEW.md  README.md  SUMMARY.md
docs/implementation/: IMAGE_GENERATION_SUMMARY.md  README.md  image-generation-implementation.md
legacy_backup/: cache_manager.py  cli_integration_example.py  main.py  main_cli_integration_example.py  test_ai_refactor.py  test_cli_refactor.py  test_cli_simple.py  validate_refactor.py
scripts/: apply_image_fixes.py  test_sdxl.py  verify_image_generation.py
secrets/: .gitkeep  README.md
src/: __init__.py  main.py
src/ai/: __init__.py  analyze_queue.py  api_key_manager.py  image_generator.py  image_queue.py  llm_interface.py  models.py  persian_prompts.py  processor.py  prompt_enhancer.py  prompts.py  response_metadata.py  stt.py  translation.py  tts.py  tts_queue.py
src/cli/: __init__.py  commands.py  handler.py  interactive.py  interactive_menu.py  interface.py  main.py  menu.py  models.py  setup_wizard.py  state.py  utils.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  health.py  settings.py  tts_config.py
src/panel/: __init__.py  app.py  auth.py  avatars.py  config.py  env_writer.py  errors.py  events.py  media_cache.py  monitor_runtime.py  onboarding.py  runner.py  state.py  throttle.py
src/telegram/: __init__.py  client.py  connection_health.py  event_handlers.py  handlers.py  handlers_enhanced.py  messages.py  models.py  user_verifier.py  utils.py
src/utils/: __init__.py  cache.py  circuit_breaker.py  error_handler.py  helpers.py  instance_lock.py  logging.py  message_sender.py  metrics.py  rate_limiter.py  retry.py  rtl_fixer.py  security.py  structured_logging.py  task_manager.py  telegram_html.py  translation_utils.py  validators.py
tests/: README.md  __init__.py  conftest.py  gtts_test.py  run_tests.py  test_ai_providers.py  test_cli_fixes.py  test_comprehensive_persian_tts.py  test_forum_mapping.py  test_gemini_tts_simple.py  test_gemini_tts_studio.py  test_llm_comprehensive.py  test_llm_providers.py  test_menu_interactions.py  test_persian_tts.py  test_providers.py  test_stt_tts_fixes_simple.py  test_system.py  test_translate_fixes.py  test_translate_fixes_simple.py  test_tts_handler.py  test_tts_integration.py
tests/fixtures/: sample_data.py
tests/helpers/: test_utils.py
tests/integration/: __init__.py  test_image_integration.py  test_integration_thinking.py  test_live_persian_ai_output.py  test_thinking_flash_debug.py  test_translation_integration.py  test_tts_integration.py
tests/live/: _helpers.py  test_panel_browser.py  test_panel_live.py
tests/panel/: conftest.py  test_chat_history.py  test_endpoints.py  test_events.py  test_groups.py  test_keys.py  test_messenger.py  test_no_send.py  test_onboarding.py  test_services.py  test_static_assets.py  test_throttle.py  test_token_persistence.py
tests/unit/: __init__.py  test_ai_handler_html.py  test_ai_processor_question_metadata.py  test_ai_providers.py  test_api_key_manager.py  test_cache.py  test_circuit_breaker.py  test_circuit_breaker_extended.py  test_cli.py  test_cli_state.py  test_config.py  test_constants.py  test_error_handler.py  test_exceptions.py  test_gemini_thinking_fallback.py  test_gemini_tts_simple.py  test_health.py  test_help_command.py  test_helpers.py  test_helpers_extended.py  test_image_caption_html.py  test_image_generator.py  test_image_handler.py  test_image_queue.py  test_llm_interface.py  test_message_sender.py  test_metrics.py  test_openrouter_question_metadata.py  test_persian_prompts.py  test_processor.py  test_prompt_enhancer.py  test_prompts_simple.py  test_rate_limiter.py  test_response_metadata_footer.py  test_retry.py  test_rtl_fixer.py  test_security.py  test_settings.py  (+10 more)
tools/: gen_icons.py  gen_screenshots.py
(+60 files in other folders)
