[metadata]
name = sakaibot
version = 2.0.0
author = Sina Amare
author_email = sina.amare@example.com
description = Advanced Telegram userbot with AI capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sina-Amare/SakaiBot
project_urls =
    Bug Tracker = https://github.com/Sina-Amare/SakaiBot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    telethon>=1.36.0
    cryptg>=0.4.0
    openai>=1.51.0
    pydantic>=2.9.2
    python-dotenv>=1.0.1
    
[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sakaibot = src.main:main